ex8/error_generated
clang: warning: argument unused during compilation: '-a' [-Wunused-command-line-argument]
Mat2x2.cpp:88:11: error: declaration of reference variable 'x' requires an initializer
  Mat2x2& x;
          ^
1 error generated.
test_Mat2x2.cpp:58:22: error: implicit instantiation of undefined template 'std::__1::basic_ostringstream<char>'
  std::ostringstream os;
                     ^
/Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX.sdk/usr/include/c++/v1/iosfwd:136:32: note: template is declared here
    class _LIBCPP_TEMPLATE_VIS basic_ostringstream;
